# lispysnake2d

./: .gitmodules  README.md  meson.build
data/: Overworld.tsx  README.md  level1.tmx  level2.tmx  platformer.tmx  platformer.tsx
demo_data/: README.md  platformer.tmx  platformer_tiles.tsx
demo_data/Spritesheet/: spaceShooter2_spritesheet.xml  spaceShooter2_spritesheet_2X.xml
demo_data/platform/: spritesheet_player1.xml  spritesheet_player3.xml
demo_data/space/Spritesheet/: spaceShooter2_spritesheet.xml  spaceShooter2_spritesheet_2X.xml
src/: meson.build
src/core/: animation.c  animation.h  camera.c  camera.h  component.c  component.h  engine-draw.c  engine-private.h  engine-update.c  engine.c  engine.h  entity.c  entity.h  frame.h  game.h  input-manager.c  input-manager.h  ls2d.h  meson.build  object.c  object.h  scene.c  scene.h  sprite.c  sprite.h  spritesheet.h  texture-cache.c  texture-cache.h  texture.c  texture.h  tilemap.h  tilesheet-private.h  tilesheet-tsx.c  tilesheet-xml.c  tilesheet.c  tilesheet.h
src/core/components/: animation-component.c  animation-component.h  position.c  position.h  sprite.c  sprite.h
src/core/entities/: basic-entity.c  basic-entity.h  entity.c  image.c  image.h  tilemap-private.h  tilemap-tmx.c  tilemap.c  tilemap.h
src/core/spritesheet/: sheet.c  spritesheet-private.h  xml.c
src/core/tilesheet/: sheet.c  tilesheet-private.h  tilesheet-tsx.c  tilesheet-xml.c  tilesheet.c  tsx.c
src/demo/: demo.c  demo.h  level.c  main.c  meson.build  player.c
